2009-07-22  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_daemon.c:
	  Fix defect#10100 where things got out of sync when NWAM was
	  restarted. The fix was to handle events better, noting that if a new
	  event occurred when we thought the connection was broken then
	  obviously it isn't any more...
	* daemon/status_icon.c: 
	  Move start/stop of wifi timer back to when NCP changes since it's
	  more correct in the long run than on ncu_up/down events, especially
	  if you've more than one wireless device.

2009-07-21  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_conn_conf_ip_panel.c:
	  Handle validation of IP Address fields.
	* common/libnwamui.h, common/libnwamui.c: 
	  Added several functions to handle GtkEntry and ip address
	  validations : nwamui_util_validate_ip_address(),
	  nwamui_util_set_entry_ip_address_only(),
	  nwamui_util_split_address_prefix(),
	  nwamui_util_join_address_prefix().
	* common/nwamui_ncu.c: 
	  Fix handling of x.x.x.x/N format addresses on loading of
	  configuration. 

2009-07-21  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_ncp.c: 
	  Change some warnings to be debug statements.
	* daemon/status_icon.c: 
	  Fix bug in daemon_status_changed which was blanking the menus when
	  the daemon state changed.
	  Added handlers for the new daemon enm and env list notifications.

2009-07-20  Darren Kenny  <darren.kenny@sun.com>

	* capplet/capplet-utils.c, capplet/nwam_location_dialog.c: 
	  Use the ENV enabled property as the transient state, which will
	  later be acted upon on commit to enable the location.
	* capplet/nwam-manager-properties.ui, common/libnwamui.h,
	  common/libnwamui.c: 
	  Make the rename dialog ok turn on/off based on length of string.
	  Also add a function to convert netmask str to prefixlen.
	* capplet/nwam_conn_conf_ip_panel.c: 
	  Fis bug#10060 to enable configuring of manual addresses.
	* capplet/nwam_tree_view.c: 
	  Fix possible crash on NULL de-ref.
	* common/nwamui_daemon.c: 